--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="sidebar-content d-flex flex-column justify-content-between h-100 fixed-sidebar">
+<div class="sticky-top sidebar-content d-flex flex-column justify-content-between h-100 w-100 fixed-sidebar">
   <div class="sidebar-content-top">
     <div class="logo mt-2 mb-3">
       <div class="sidebar-logo">
