--- a/src/app/features/post-login/inspection/inspection-document/inspection-document.component.html
+++ b/src/app/features/post-login/inspection/inspection-document/inspection-document.component.html
@@ -26,9 +26,8 @@
   <div class="row">
     <h4 class="mb-3">Chi tiết quyết định kiểm tra</h4>
     <div class="row">
-      <div class="col-md-12 d-flex flex-row ">
-        <button type="button" pButton (click)="initDetailRecordData(inspectionDocument.reportId)">Báo cáo
-        </button>
+      <div class="col-md-12 d-flex flex-row mb-2">
+        <button type="button" class="me-2" pButton (click)="initDetailRecordData(inspectionDocument.reportId)">Báo cáo</button>
         <button type="button" pButton (click)="initDetailRecordData(inspectionDocument.conclusionId)">Kết luận</button>
       </div>
       <div class="form-content col-md-12 h-100">
