Add loading complete's height and width input

--- a/src/app/components/loading-complete-dialog/loading-complete-dialog.component.html
+++ b/src/app/components/loading-complete-dialog/loading-complete-dialog.component.html
@@ -1,7 +1,7 @@
 <p-dialog
   header="{{header}}"
   [(visible)]="visible"
-  [style]="{ width: '40%', height: '50%' }"
+  [style]="{ 'width.%': width, 'height.%': height }"
   [draggable]="false"
   [resizable]="false"
   [closable]="false"
