Update record detail

--- a/src/app/features/post-login/inspection/inspection-document/inspection-document.component.scss
+++ b/src/app/features/post-login/inspection/inspection-document/inspection-document.component.scss
@@ -1,52 +1,74 @@
 @import "../../../../../assets/scss/base";
-*{
+
+* {
   font-size: 16px;
 }
 
-.th-small{
+.th-small {
   width: 100px;
 }
 
-.action-button{
-  button{
+.action-button {
+  button {
     width: 30px;
     height: 30px;
     border-radius: 50%;
     border: none;
     background: $primary;
-    i{
+
+    i {
       color: white;
     }
   }
 }
 
 :host ::ng-deep {
-  .p-button {
-    background-color: $primary;
-    border-radius: 8px;
-    border: solid 1px $primary;
-    transition: all 0.5s ease;
-    width: 150px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    &:hover {
-      background-color: $primary-hover;
-      border-color: $primary-hover;
+  .report-button {
+    .p-button {
+      background-color: $primary;
+      border-radius: 8px;
+      border: solid 1px $primary;
+      transition: all 0.5s ease;
+      width: 150px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      &:hover {
+        background-color: $primary-hover;
+        border-color: $primary-hover;
+      }
     }
   }
 }
 
-.create-button{
+.create-button, .complete-button {
   width: auto;
+  background-color: $primary;
+  border-radius: 8px;
+  border: solid 1px $primary;
+  transition: all 0.5s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &:hover {
+    background-color: $primary-hover;
+    border-color: $primary-hover;
+  }
 }
 
-:host ::ng-deep .p-dialog-footer{
+:host ::ng-deep .p-dialog-footer {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  .p-button{
+
+  .p-button {
     margin-left: 30px;
   }
 }
 
+.disabled-action-button {
+  cursor: not-allowed;
+  opacity: 0.35;
+}
