--- a/src/app/features/post-login/inspection/inspection-document/inspection-document.component.html
+++ b/src/app/features/post-login/inspection/inspection-document/inspection-document.component.html
@@ -10,6 +10,7 @@
   [recordId]="recordId">
 </app-update-record>
 <app-record-detail
+  [canUploadDocument]="canUploadDocument"
   [recordId]="recordId"
   [detailRecordPopupVisible]="detailRecordPopupVisible"
   (detailRecordPopupVisibleChange)="changeDetailRecordVisible()">
@@ -26,7 +27,7 @@
   <div class="row">
     <h4 class="mb-3">Chi tiết quyết định kiểm tra</h4>
     <div class="row">
-      <div class="col-md-12 d-flex flex-row mb-2">
+      <div class="col-md-12 d-flex flex-row mb-2 report-button">
         <button type="button" class="me-2" pButton (click)="initDetailRecordData(inspectionDocument.reportId)">Báo cáo</button>
         <button type="button" pButton (click)="initDetailRecordData(inspectionDocument.conclusionId)">Kết luận</button>
       </div>
@@ -81,7 +82,7 @@
                   <p-sortIcon field="deadline"></p-sortIcon>
                 </div>
               </th>
-              <th class="th-small"></th>
+              <th *ngIf="inspectionDocument.isChief" class="th-small"></th>
             </tr>
           </ng-template>
           <ng-template pTemplate="body" let-taskList >
@@ -102,7 +103,7 @@
                 <span class="p-column-title">Ngày nộp</span>
                 {{ taskList.deadline | date: "dd/MM/yyyy" }}
               </td>
-              <td style="text-align: center"
+              <td style="text-align: center" *ngIf="inspectionDocument.isChief"
                   class="d-flex td-action justify-content-center align-items-center action-button">
                 <div class="action-item d-flex justify-content-center align-items-center mx-2">
                   <button type="button" (click)="initDetailRecordData(taskList.taskId)">
@@ -110,12 +111,12 @@
                   </button>
                 </div>
                 <div class="action-item d-flex justify-content-center align-items-center mx-2">
-                  <button type="button" (click)="initUpdateRecordData(taskList.taskId)">
+                  <button type="button" (click)="initUpdateRecordData(taskList.taskId)" [disabled]="!taskList.canManipulate" [class.disabled-action-button]="!taskList.canManipulate">
                     <i class="bi bi-pencil-fill"></i>
                   </button>
                 </div>
                 <div class="action-item d-flex justify-content-center align-items-center mx-2">
-                  <button type="button" (click)="handleOnClickDeleteRecord(taskList.taskId)">
+                  <button type="button" (click)="handleOnClickDeleteRecord(taskList.taskId)" [disabled]="!taskList.canManipulate" [class.disabled-action-button]="!taskList.canManipulate">
                     <i class="bi bi-trash-fill"></i>
                   </button>
                 </div>
@@ -132,6 +133,6 @@
     </div>
   </div>
   <div class="w-100 d-flex justify-content-center align-items-center mt-3">
-    <button type="button" class=" mb-1" pButton>Hoàn thành</button>
+    <button type="button" class="mb-1 complete-button" pButton>Hoàn thành</button>
   </div>
 </div>
