--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.scss
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.scss
@@ -11,17 +11,14 @@
 .plan-file-item {
     cursor: pointer;
     height: 160px;
-    border-radius: 15px;
     background-color: #f9fafb;
+    border-radius: 10px;
     font-size: 16px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     transition: all 0.6s ease;
-    .font-weight-bold {
-        color: #686f73;
-    }
     &:hover {
-        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
         cursor: pointer;
+        background-color: rgb(244, 244, 244);
     }
     .plan-file-item-img {
         width: 30%;
@@ -165,4 +162,7 @@ input {
 .calendar {
     height: 400px;
     width: 400px;
+}
+.height-80 {
+    height: 80px;
 }
