--- a/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
+++ b/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
@@ -464,7 +464,7 @@
                     >{{ item.creator.user.fullName }}
                   </span>
                   <span class="text-black-50 comment-date">{{
-                    item.createdDate | date : "dd/MM/yyyy hh:mm"
+                    item.createdDate | date : "dd/MM/yyyy HH:mm"
                   }}</span>
 
                   <br />
@@ -496,7 +496,7 @@
                   </span>
                   <br />
                   <span class="text-black-50 history-date">
-                    {{ item.createdDate | date : "dd/MM/yyyy  hh:mm" }}
+                    {{ item.createdDate | date : "dd/MM/yyyy  HH:mm" }}
                   </span>
                 </div>
               </div>
