--- a/src/app/features/post-login/inspection/inspection-mytask/inspection-mytask.component.html
+++ b/src/app/features/post-login/inspection/inspection-mytask/inspection-mytask.component.html
@@ -1,5 +1,6 @@
 <app-record-detail
   [canUploadDocument]="true"
+  [canDeleteDocument]="true"
   [recordId]="recordId"
   [detailRecordPopupVisible]="detailRecordPopupVisible"
   (detailRecordPopupVisibleChange)="changeDetailRecordVisible()">
