fix get current issue

--- a/src/app/features/post-login/school-list/school-update/school-update.component.html
+++ b/src/app/features/post-login/school-list/school-update/school-update.component.html
@@ -54,7 +54,7 @@
 
         </div>
         <button class="m-3 btn btn-primary" type="submit">Cập nhật</button>
-        <button class="m-3 btn btn-primary" (click)="onBack()" >Quay lại</button>
+<!--        <button class="m-3 btn btn-primary" (click)="onBack()" >Quay lại</button>-->
 
     </div>
   <div class="col-md-6">
