--- a/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.scss
+++ b/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.scss
@@ -144,6 +144,17 @@ input {
             border-color: $primary-hover;
         }
     }
+    .p-table {
+        tr {
+            height: 100px;
+        }
+        td {
+            font-size: 16px;
+        }
+    }
+    .history-search-box {
+        width: 300px;
+    }
     // .p-confirm-dialog-reject {
     //     background-color: #fff;
     //     color: $primary;
