loading preview file

--- a/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
+++ b/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
@@ -6,6 +6,7 @@
   rejectLabel="Hủy"
   key="confirmAssignment"
 ></p-confirmDialog>
+<app-file-loading [visible]="isFileLoading" [progress]="''"></app-file-loading>
 <!-- file preview -->
 <p-dialog
   [(visible)]="pdfLoaded"
