--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
@@ -8,6 +8,7 @@
   [progress]="'Vui lòng đợi trong giây lát'"
   [complete]="'Đánh giá thành công'"
 ></app-loading-complete-dialog>
+<app-file-loading [visible]="isFileLoading" [progress]="''"></app-file-loading>
 <p-confirmDialog
   [style]="{ width: '50vw' }"
   acceptLabel="Đồng ý"
@@ -100,8 +101,7 @@
               field="departmentDocument.account.user.fullName"
             ></p-sortIcon>
           </th>
-          <th>
-          </th>
+          <th></th>
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-plan let-i="rowIndex">
