--- a/src/app/features/post-login/school-list/school-list.component.scss
+++ b/src/app/features/post-login/school-list/school-list.component.scss
@@ -15,6 +15,10 @@
     // text-overflow: ellipsis; /* Display ellipsis for overflowing text */
   }
   ul {
+    .p-column-filter-row-items {
+      padding: 0;
+      margin: 0;
+    }
     padding: 0;
     margin-bottom: 0;
   }
