--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -35,7 +35,7 @@
           <a class="" [routerLink]="['/school/'] + schoolId">
             <div>
               <i class="bi bi-building"></i>
-              &nbsp; Trường của bạn
+              &nbsp; Đơn vị hiện tại
             </div>
           </a>
         </li>
@@ -110,7 +110,7 @@
         <li
           class="p-2 rounded"
           routerLinkActive="active"
-          *ngIf="isPrincipal || isChiefTeacher || isTeacher"
+          *ngIf="isPrincipal || isSchoolNormalEmp"
         >
           <a class="" [routerLink]="['/assignassignment/' + issueId]">
             <div>
@@ -122,7 +122,7 @@
         <li
           class="p-2 rounded"
           routerLinkActive="active"
-          *ngIf="isDirector || isPrincipal || isChiefTeacher || isTeacher"
+          *ngIf="isDirector || isPrincipal || isSchoolNormalEmp"
         >
           <a class="" [routerLink]="['/listAssignment']">
             <div>
