--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -31,7 +31,7 @@
             </div>
           </a>
         </li>
-        <li class="p-2 rounded" routerLinkActive="active" *ngIf="isPrincipal">
+        <li class="p-2 rounded" routerLinkActive="active" *ngIf="isPrincipal || isSchoolNormalEmp">
           <a class="" [routerLink]="['/school/'] + schoolId">
             <div>
               <i class="bi bi-building"></i>
@@ -66,7 +66,7 @@
         <li
           class="p-2 rounded"
           routerLinkActive="active"
-          *ngIf="isPrincipal || isDirector"
+          *ngIf="isPrincipal || isDirector || isSchoolNormalEmp"
         >
           <a class="" [routerLink]="['/issuelist']">
             <div>
