--- a/src/app/features/post-login/guidance-document-list/guidance-document-list.component.html
+++ b/src/app/features/post-login/guidance-document-list/guidance-document-list.component.html
@@ -88,7 +88,7 @@
 
 
 <div class="d-flex justify-content-end mb-3">
-  <button class="btn btn-primary" (click)="onCreateGuidanceDocument()" *ngIf="!isPrincipal">Tạo mới</button>
+  <button class="btn btn-primary" (click)="onCreateGuidanceDocument()" *ngIf="isDirector||isViceDirector">Tạo mới</button>
 </div>
 <div class="container">
   <table class="table table-hover table-fit">
