--- a/src/app/features/post-login/issue-list/issue-list.component.html
+++ b/src/app/features/post-login/issue-list/issue-list.component.html
@@ -1,4 +1,4 @@
-<h4>Danh sách văn bản triển khai kế hoạch năm học</h4>
+<h4>Danh sách kế hoạch kiểm tra năm học</h4>
 
 <div class="card">
   <p-table
