fix change assignee

--- a/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.scss
+++ b/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.scss
@@ -81,7 +81,7 @@
         padding: 0;
     }
     .p-dropdown {
-        height: 52px;
+        // height: 52px;
     }
 }
 .font-weight-bold {
@@ -316,4 +316,7 @@ th {
 }
 .font-size-14 {
     font-size: 14px;
+}
+.assignee-dropdown {
+    line-height: 10px;
 }
