--- a/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
+++ b/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
@@ -185,7 +185,11 @@
                 !hasAuthority('canModifyFolderAsmMetaData'))
             "
             class="font-weight-bold"
-            >{{ selectedAssignment.deadline | date : "dd/MM/yyyy" }}</span
+            >{{
+              selectedAssignment.deadline
+                ? (selectedAssignment.deadline | date : "dd/MM/yyyy")
+                : "Chưa có hạn nộp"
+            }}</span
           >
           <input
             pInputText
@@ -202,16 +206,7 @@
           "
         >
           <div class="mt-3">
-            <button
-              *ngIf="
-                assignmentForm.get('assignmentName')?.dirty ||
-                assignmentForm.get('description')?.dirty ||
-                assignmentForm.get('deadline')?.dirty
-              "
-              pButton
-              label="Lưu"
-              (click)="update()"
-            ></button>
+            <button pButton label="Lưu" (click)="update()"></button>
           </div>
         </div>
 
@@ -380,7 +375,9 @@
         <div
           class="mt-2"
           *ngIf="
-            !selectedAssignment.task && selectedAssignment.children.length > 0
+            !selectedAssignment.task &&
+            selectedAssignment.children.length > 0 &&
+            action === 'info'
           "
         >
           <span class="text-black-50"> Danh sách công việc con </span>
@@ -527,27 +524,60 @@
           <span class="text-black-50">Người làm</span>
           <br />
           <p-dropdown
+            class="assignee-dropdown"
             [options]="listOfPossibleAssignees"
             [filter]="true"
-            optionLabel="user.fullName"
             filterBy="user.fullName"
-            *ngIf="action === 'update' && hasAuthority('canChangeAssignee')"
+            *ngIf="action === 'info' && hasAuthority('canChangeAssignee')"
             (onChange)="[onChangeAssignee($event), onPatchAssigneeId()]"
             [ngModelOptions]="{ standalone: true }"
             [(ngModel)]="selectedAssignee"
           >
-            <ng-template pTemplate="selected-item">
-              {{ selectedAssignee.user.fullName }}
+            <ng-template pTemplate="selectedItem">
+              <div class="row">
+                <div
+                  class="comment-item-person col-md-2 d-flex justify-content-center align-items-center"
+                >
+                  <img
+                    src="../../../../../../assets/img/user_icon.svg"
+                    alt=""
+                  />
+                </div>
+                <div class="col-md-10 d-flex align-items-center">
+                  <span class="font-weight-bold">{{
+                    selectedAssignee?.user.fullName
+                  }}</span>
+                </div>
+              </div>
             </ng-template>
             <ng-template let-option pTemplate="item">
-              <div>
+              <!-- <div>
                 {{ option?.user.fullName }}
+              </div> -->
+              <div class="row">
+                <div
+                  class="comment-item-person col-md-2 d-flex justify-content-center align-items-center"
+                >
+                  <img
+                    src="../../../../../../assets/img/user_icon.svg"
+                    alt=""
+                  />
+                </div>
+                <div class="col-md-10 d-flex align-items-center">
+                  <span class="font-weight-bold">{{
+                    option?.user.fullName
+                  }}</span
+                  >&nbsp;
+                  <span class="text-black-50 font-size-14">
+                    {{ option?.email }}</span
+                  >
+                </div>
               </div>
             </ng-template>
           </p-dropdown>
           <div
             class="row"
-            *ngIf="action === 'info' || !hasAuthority('canChangeAssignee')"
+            *ngIf="action === 'update' || !hasAuthority('canChangeAssignee')"
           >
             <ng-container *ngIf="selectedAssignment.assignee; else noAssignee">
               <div
@@ -693,23 +723,48 @@
           <p-dropdown
             class="assignee-dropdown"
             [options]="listOfPossibleAssignees"
-            formControlName="assigneeId"
-            optionValue="accountId"
-            filterBy="user.fullName"
             [filter]="true"
+            filterBy="user.fullName"
+            (onChange)="[onPatchAssigneeId()]"
+            [ngModelOptions]="{ standalone: true }"
+            [(ngModel)]="selectedAssignee"
           >
             <ng-template let-option pTemplate="selectedItem">
-              <div>
-                <span> {{ option?.user.fullName }} </span>&nbsp;
-                <!-- <span class="text-black-50"> {{ option?.email }}</span> -->
+              <div class="row">
+                <div
+                  class="comment-item-person col-md-2 d-flex justify-content-center align-items-center"
+                >
+                  <img
+                    src="../../../../../../assets/img/user_icon.svg"
+                    alt=""
+                  />
+                </div>
+                <div class="col-md-10 d-flex align-items-center">
+                  <span class="font-weight-bold">{{
+                    option?.user.fullName
+                  }}</span>
+                </div>
               </div>
             </ng-template>
             <ng-template let-option pTemplate="item">
-              <div>
-                <span> {{ option?.user.fullName }} </span>&nbsp;
-                <span class="text-black-50 font-size-14">
-                  {{ option?.email }}</span
+              <div class="row">
+                <div
+                  class="comment-item-person col-md-2 d-flex justify-content-center align-items-center"
                 >
+                  <img
+                    src="../../../../../../assets/img/user_icon.svg"
+                    alt=""
+                  />
+                </div>
+                <div class="col-md-10 d-flex align-items-center">
+                  <span class="font-weight-bold">{{
+                    option?.user.fullName
+                  }}</span
+                  >&nbsp;
+                  <span class="text-black-50 font-size-14">
+                    {{ option?.email }}</span
+                  >
+                </div>
               </div>
             </ng-template>
           </p-dropdown>
@@ -795,8 +850,34 @@
         </span>
       </td>
       <!-- <td>{{ rowData.node.assigner?.user.fullName }}</td>   -->
-      <td>{{ rowData.node.assignee?.user.fullName }}</td>
-      <td>{{ rowData.node?.deadline | date : "dd/MM/yyyy" }}</td>
+      <td>
+        <div
+          *ngIf="rowData.node.assignee?.user.fullName; else noAssignee"
+          class="row"
+        >
+          <div
+            class="comment-item-person col-md-2 d-flex justify-content-center align-items-center"
+          >
+            <img src="../../../../../../assets/img/user_icon.svg" alt="" />
+          </div>
+          <div class="col-md-10 d-flex align-items-center">
+            <span class="font-weight-bold">{{
+              rowData.node.assignee?.user.fullName
+            }}</span>
+          </div>
+        </div>
+        <ng-template #noAssignee>
+          <span class="font-weight-bold">Chưa có người làm</span>
+        </ng-template>
+      </td>
+      <td>
+        <ng-container *ngIf="rowData.node?.deadline; else noDeadline">
+          {{ rowData.node.deadline | date : "dd/MM/yyyy" }}
+        </ng-container>
+        <ng-template #noDeadline>
+          <span class="font-weight-bold">Chưa có hạn nộp</span>
+        </ng-template>
+      </td>
       <td>
         <p-tag
           [rounded]="true"
